Fix mobile layout bug

--- a/Styles/homePage.scss
+++ b/Styles/homePage.scss
@@ -94,7 +94,7 @@
 
     }
     #THREEJSCanvas{
-        margin-bottom: 0.2rem;
+        margin-bottom: 2rem;
     }
 
     .mainContent__header-text{
