--- a/Styles/socials.scss
+++ b/Styles/socials.scss
@@ -2,6 +2,7 @@
 	background-color: black;
 	border-top: 0.01rem solid #717171;
 	padding-top: 3rem;
+	padding-bottom: 1.2rem;
 
 	@media (min-height: 700px){
 		display: flex;
